@@ -1,6 +1,8 @@
-/**
+/*
+ * This project is licensed under the MIT license. Module model-view-viewmodel is using ZK framework licensed under LGPL (see lgpl-3.0.txt).
+ *
  * The MIT License
- * Copyright © 2014-2019 Ilkka Seppälä
+ * Copyright © 2014-2022 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -23,67 +25,105 @@
 package com.iluwatar.abstractdocument;
 
 import org.junit.jupiter.api.Test;
-
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Stream;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * AbstractDocument test class
  */
-public class AbstractDocumentTest {
+class AbstractDocumentTest {
 
   private static final String KEY = "key";
   private static final String VALUE = "value";
 
-  private class DocumentImplementation extends AbstractDocument {
+  private static class DocumentImplementation extends AbstractDocument {
 
     DocumentImplementation(Map<String, Object> properties) {
       super(properties);
     }
   }
 
-  private DocumentImplementation document = new DocumentImplementation(new HashMap<>());
+  private final DocumentImplementation document = new DocumentImplementation(new HashMap<>());
 
   @Test
-  public void shouldPutAndGetValue() {
+  void shouldPutAndGetValue() {
     document.put(KEY, VALUE);
     assertEquals(VALUE, document.get(KEY));
   }
 
   @Test
-  public void shouldRetrieveChildren() {
-    Map<String, Object> child1 = new HashMap<>();
-    Map<String, Object> child2 = new HashMap<>();
-    List<Map<String, Object>> children = Arrays.asList(child1, child2);
+  void shouldRetrieveChildren() {
+    var children = List.of(Map.of(), Map.of());
 
     document.put(KEY, children);
 
-    Stream<DocumentImplementation> childrenStream = document.children(KEY, DocumentImplementation::new);
+    var childrenStream = document.children(KEY, DocumentImplementation::new);
     assertNotNull(children);
     assertEquals(2, childrenStream.count());
   }
 
   @Test
-  public void shouldRetrieveEmptyStreamForNonExistingChildren() {
-    Stream<DocumentImplementation> children = document.children(KEY, DocumentImplementation::new);
+  void shouldRetrieveEmptyStreamForNonExistingChildren() {
+    var children = document.children(KEY, DocumentImplementation::new);
     assertNotNull(children);
     assertEquals(0, children.count());
   }
 
   @Test
-  public void shouldIncludePropsInToString() {
-    Map<String, Object> props = new HashMap<>();
-    props.put(KEY, VALUE);
-    DocumentImplementation document = new DocumentImplementation(props);
+  void shouldIncludePropsInToString() {
+    var props = Map.of(KEY, (Object) VALUE);
+    var document = new DocumentImplementation(props);
     assertTrue(document.toString().contains(KEY));
     assertTrue(document.toString().contains(VALUE));
   }
 
+  @Test
+  void shouldHandleExceptionDuringConstruction() {
+    Map<String, Object> invalidProperties = null; // Invalid properties, causing NullPointerException
+
+    // Throw null pointer exception
+    assertThrows(NullPointerException.class, () -> {
+      // Attempt to construct a document with invalid properties
+      new DocumentImplementation(invalidProperties);
+    });
+  }
+
+  @Test
+  void shouldPutAndGetNestedDocument() {
+    // Creating a nested document
+    DocumentImplementation nestedDocument = new DocumentImplementation(new HashMap<>());
+    nestedDocument.put("nestedKey", "nestedValue");
+
+
+    document.put("nested", nestedDocument);
+
+    // Retrieving the nested document
+    DocumentImplementation retrievedNestedDocument = (DocumentImplementation) document.get("nested");
+
+    assertNotNull(retrievedNestedDocument);
+    assertEquals("nestedValue", retrievedNestedDocument.get("nestedKey"));
+  }
+
+  @Test
+  void shouldUpdateExistingValue() {
+    // Arrange
+    final String key = "key";
+    final String originalValue = "originalValue";
+    final String updatedValue = "updatedValue";
+
+    // Initializing the value
+    document.put(key, originalValue);
+
+    // Verifying that the initial value is retrieved correctly
+    assertEquals(originalValue, document.get(key));
+
+    // Updating the value
+    document.put(key, updatedValue);
+
+    // Verifying that the updated value is retrieved correctly
+    assertEquals(updatedValue, document.get(key));
+  }
 }
