@@ -1,6 +1,8 @@
-/**
+/*
+ * This project is licensed under the MIT license. Module model-view-viewmodel is using ZK framework licensed under LGPL (see lgpl-3.0.txt).
+ *
  * The MIT License
- * Copyright © 2014-2019 Ilkka Seppälä
+ * Copyright © 2014-2022 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -25,61 +27,64 @@ package com.iluwatar.converter;
 import java.util.Collection;
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
 
 /**
  * Generic converter, thanks to Java8 features not only provides a way of generic bidirectional
- * conversion between corresponding types, but also a common way of converting a collection of objects
- * of the same type, reducing boilerplate code to the absolute minimum.
+ * conversion between corresponding types, but also a common way of converting a collection of
+ * objects of the same type, reducing boilerplate code to the absolute minimum.
+ *
  * @param <T> DTO representation's type
  * @param <U> Domain representation's type
  */
+@RequiredArgsConstructor
 public class Converter<T, U> {
 
   private final Function<T, U> fromDto;
   private final Function<U, T> fromEntity;
 
   /**
-   * @param fromDto Function that converts given dto entity into the domain entity.
-   * @param fromEntity Function that converts given domain entity into the dto entity.
-   */
-  public Converter(final Function<T, U> fromDto, final Function<U, T> fromEntity) {
-    this.fromDto = fromDto;
-    this.fromEntity = fromEntity;
-  }
-
-  /**
+   * Converts DTO to Entity.
+   *
    * @param dto DTO entity
-   * @return The domain representation - the result of the converting function application on dto entity.
+   * @return The domain representation - the result of the converting function application on dto
+   *     entity.
    */
   public final U convertFromDto(final T dto) {
     return fromDto.apply(dto);
   }
 
   /**
+   * Converts Entity to DTO.
+   *
    * @param entity domain entity
-   * @return The DTO representation - the result of the converting function application on domain entity.
+   * @return The DTO representation - the result of the converting function application on domain
+   *     entity.
    */
   public final T convertFromEntity(final U entity) {
     return fromEntity.apply(entity);
   }
 
   /**
+   * Converts list of DTOs to list of Entities.
+   *
    * @param dtos collection of DTO entities
-   * @return List of domain representation of provided entities retrieved by
-   *        mapping each of them with the conversion function
+   * @return List of domain representation of provided entities retrieved by mapping each of them
+   *     with the conversion function
    */
   public final List<U> createFromDtos(final Collection<T> dtos) {
-    return dtos.stream().map(this::convertFromDto).collect(Collectors.toList());
+    return dtos.stream().map(this::convertFromDto).toList();
   }
 
   /**
+   * Converts list of Entities to list of DTOs.
+   *
    * @param entities collection of domain entities
-   * @return List of domain representation of provided entities retrieved by
-   *        mapping each of them with the conversion function
+   * @return List of domain representation of provided entities retrieved by mapping each of them
+   *     with the conversion function
    */
   public final List<T> createFromEntities(final Collection<U> entities) {
-    return entities.stream().map(this::convertFromEntity).collect(Collectors.toList());
+    return entities.stream().map(this::convertFromEntity).toList();
   }
 
 }
