@@ -1,6 +1,8 @@
-/**
+/*
+ * This project is licensed under the MIT license. Module model-view-viewmodel is using ZK framework licensed under LGPL (see lgpl-3.0.txt).
+ *
  * The MIT License
- * Copyright © 2014-2019 Ilkka Seppälä
+ * Copyright © 2014-2022 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -22,6 +24,14 @@
  */
 package com.iluwatar.flux.dispatcher;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertSame;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoMoreInteractions;
+
 import com.iluwatar.flux.action.Action;
 import com.iluwatar.flux.action.ActionType;
 import com.iluwatar.flux.action.Content;
@@ -33,25 +43,11 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
 
-import java.lang.reflect.Constructor;
-import java.lang.reflect.Field;
-import java.util.List;
-import java.util.stream.Collectors;
-
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertSame;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.verifyNoMoreInteractions;
-
 /**
- * Date: 12/12/15 - 8:22 PM
+ * DispatcherTest
  *
- * @author Jeroen Meulemeester
  */
-public class DispatcherTest {
+class DispatcherTest {
 
   /**
    * Dispatcher is a singleton with no way to reset it's internal state back to the beginning.
@@ -59,54 +55,57 @@ public class DispatcherTest {
    * influence on each other.
    */
   @BeforeEach
-  public void setUp() throws Exception {
-    final Constructor<Dispatcher> constructor;
-    constructor = Dispatcher.class.getDeclaredConstructor();
+  void setUp() throws Exception {
+    final var constructor = Dispatcher.class.getDeclaredConstructor();
     constructor.setAccessible(true);
 
-    final Field field = Dispatcher.class.getDeclaredField("instance");
+    final var field = Dispatcher.class.getDeclaredField("instance");
     field.setAccessible(true);
     field.set(Dispatcher.getInstance(), constructor.newInstance());
   }
 
   @Test
-  public void testGetInstance() throws Exception {
+  void testGetInstance() {
     assertNotNull(Dispatcher.getInstance());
     assertSame(Dispatcher.getInstance(), Dispatcher.getInstance());
   }
 
   @Test
-  public void testMenuItemSelected() throws Exception {
-    final Dispatcher dispatcher = Dispatcher.getInstance();
+  void testMenuItemSelected() {
+    final var dispatcher = Dispatcher.getInstance();
 
-    final Store store = mock(Store.class);
+    final var store = mock(Store.class);
     dispatcher.registerStore(store);
     dispatcher.menuItemSelected(MenuItem.HOME);
     dispatcher.menuItemSelected(MenuItem.COMPANY);
 
     // We expect 4 events, 2 menu selections and 2 content change actions
-    final ArgumentCaptor<Action> actionCaptor = ArgumentCaptor.forClass(Action.class);
+    final var actionCaptor = ArgumentCaptor.forClass(Action.class);
     verify(store, times(4)).onAction(actionCaptor.capture());
     verifyNoMoreInteractions(store);
 
-    final List<Action> actions = actionCaptor.getAllValues();
-    final List<MenuAction> menuActions = actions.stream()
-            .filter(a -> a.getType().equals(ActionType.MENU_ITEM_SELECTED))
-            .map(a -> (MenuAction) a)
-            .collect(Collectors.toList());
+    final var actions = actionCaptor.getAllValues();
+    final var menuActions = actions.stream()
+        .filter(a -> a.getType().equals(ActionType.MENU_ITEM_SELECTED))
+        .map(a -> (MenuAction) a)
+        .toList();
 
-    final List<ContentAction> contentActions = actions.stream()
-            .filter(a -> a.getType().equals(ActionType.CONTENT_CHANGED))
-            .map(a -> (ContentAction) a)
-            .collect(Collectors.toList());
+    final var contentActions = actions.stream()
+        .filter(a -> a.getType().equals(ActionType.CONTENT_CHANGED))
+        .map(a -> (ContentAction) a)
+        .toList();
 
     assertEquals(2, menuActions.size());
-    assertEquals(1, menuActions.stream().map(MenuAction::getMenuItem).filter(MenuItem.HOME::equals).count());
-    assertEquals(1, menuActions.stream().map(MenuAction::getMenuItem).filter(MenuItem.COMPANY::equals).count());
+    assertEquals(1, menuActions.stream().map(MenuAction::getMenuItem).filter(MenuItem.HOME::equals)
+        .count());
+    assertEquals(1, menuActions.stream().map(MenuAction::getMenuItem)
+        .filter(MenuItem.COMPANY::equals).count());
 
     assertEquals(2, contentActions.size());
-    assertEquals(1, contentActions.stream().map(ContentAction::getContent).filter(Content.PRODUCTS::equals).count());
-    assertEquals(1, contentActions.stream().map(ContentAction::getContent).filter(Content.COMPANY::equals).count());
+    assertEquals(1, contentActions.stream().map(ContentAction::getContent)
+        .filter(Content.PRODUCTS::equals).count());
+    assertEquals(1, contentActions.stream().map(ContentAction::getContent)
+        .filter(Content.COMPANY::equals).count());
 
   }
 
