@@ -1,6 +1,8 @@
-/**
+/*
+ * This project is licensed under the MIT license. Module model-view-viewmodel is using ZK framework licensed under LGPL (see lgpl-3.0.txt).
+ *
  * The MIT License
- * Copyright © 2014-2019 Ilkka Seppälä
+ * Copyright © 2014-2022 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -23,33 +25,22 @@
 package com.iluwatar.retry;
 
 import java.util.ArrayDeque;
-import java.util.Arrays;
 import java.util.Deque;
+import java.util.List;
 
 /**
  * Finds a customer, returning its ID from our records.
- * <p>
- * This is an imaginary operation that, for some imagined input, returns the ID for a customer. 
- * However, this is a "flaky" operation that is supposed to fail intermittently, but for the 
+ *
+ * <p>This is an imaginary operation that, for some imagined input, returns the ID for a customer.
+ * However, this is a "flaky" operation that is supposed to fail intermittently, but for the
  * purposes of this example it fails in a programmed way depending on the constructor parameters.
  *
- * @author George Aristy (george.aristy@gmail.com)
  */
-public final class FindCustomer implements BusinessOperation<String> {
-  private final String customerId;
-  private final Deque<BusinessException> errors;
 
-  /**
-   * Ctor.
-   * 
-   * @param customerId the final result of the remote operation
-   * @param errors the errors to throw before returning {@code customerId}
-   */
+public record FindCustomer(String customerId, Deque<BusinessException> errors) implements BusinessOperation<String> {
   public FindCustomer(String customerId, BusinessException... errors) {
-    this.customerId = customerId;
-    this.errors = new ArrayDeque<>(Arrays.asList(errors));
+    this(customerId, new ArrayDeque<>(List.of(errors)));
   }
-  
   @Override
   public String perform() throws BusinessException {
     if (!this.errors.isEmpty()) {
