@@ -1,6 +1,8 @@
-/**
+/*
+ * This project is licensed under the MIT license. Module model-view-viewmodel is using ZK framework licensed under LGPL (see lgpl-3.0.txt).
+ *
  * The MIT License
- * Copyright © 2014-2019 Ilkka Seppälä
+ * Copyright © 2014-2022 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -22,34 +24,33 @@
  */
 package com.iluwatar.strategy;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+
 import ch.qos.logback.classic.Logger;
 import ch.qos.logback.classic.spi.ILoggingEvent;
 import ch.qos.logback.core.AppenderBase;
+import java.util.Collection;
+import java.util.LinkedList;
+import java.util.List;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.slf4j.LoggerFactory;
 
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.LinkedList;
-import java.util.List;
-
-import static org.junit.jupiter.api.Assertions.assertEquals;
-
 /**
- * Date: 12/29/15 - 10:58 PM
+ * DragonSlayingStrategyTest
  *
- * @author Jeroen Meulemeester
  */
-public class DragonSlayingStrategyTest {
+class DragonSlayingStrategyTest {
 
   /**
+   * Assembles test parameters.
+   *
    * @return The test parameters for each cycle
    */
   static Collection<Object[]> dataProvider() {
-    return Arrays.asList(
+    return List.of(
         new Object[]{
             new MeleeStrategy(),
             "With your Excalibur you sever the dragon's head!"
@@ -68,29 +69,29 @@ public class DragonSlayingStrategyTest {
   private InMemoryAppender appender;
 
   @BeforeEach
-  public void setUp() {
+  void setUp() {
     appender = new InMemoryAppender();
   }
 
   @AfterEach
-  public void tearDown() {
+  void tearDown() {
     appender.stop();
   }
 
 
   /**
-   * Test if executing the strategy gives the correct response
+   * Test if executing the strategy gives the correct response.
    */
   @ParameterizedTest
   @MethodSource("dataProvider")
-  public void testExecute(DragonSlayingStrategy strategy, String expectedResult) {
+  void testExecute(DragonSlayingStrategy strategy, String expectedResult) {
     strategy.execute();
     assertEquals(expectedResult, appender.getLastMessage());
     assertEquals(1, appender.getLogSize());
   }
 
-  private class InMemoryAppender extends AppenderBase<ILoggingEvent> {
-    private List<ILoggingEvent> log = new LinkedList<>();
+  private static class InMemoryAppender extends AppenderBase<ILoggingEvent> {
+    private final List<ILoggingEvent> log = new LinkedList<>();
 
     public InMemoryAppender() {
       ((Logger) LoggerFactory.getLogger("root")).addAppender(this);
